--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,3 @@
-
-
-
 *:not(body):not(html) {
   box-sizing:border-box;
   border:1px dashed #000;
@@ -9,18 +6,21 @@
 html {
   box-sizing: border-box;
 }
+
 *, *:before, *:after {
   box-sizing: inherit;
 }
+
 .wrap {
   width: 90%;
   margin: 0 auto;
 
 }
 
-.image-header {
+.image-header, .images, .col1, h1 {
   text-align: center;
 }
+
 ul {
   list-style-type: none;
   margin: 0;
@@ -33,11 +33,75 @@ img {
 }
 
 
-@media screen and (max-width:800px) {
+/*bigger*/
+@media screen and (min-width:600px) {
+  .wrap{
+    position: relative;
+  }
+  .col1 {
+    clear: both;
+    float: left;
+    width: 25%;
+  }
+
+  .navbar {
+    margin-top: 5em;
+  }
+  .logo {
+    margin-top: 5em;
+  }
+  .col2 {
+    float: right;
+    margin-left: 10em;
+    position: relative;
+    bottom: 15em;
+    width: 70%;
+  }
+
+  .images {
+    column-count: 3;
+  }
+
+}
+
+/*MOBILE*/
+@media screen and (max-width:599px) {
   .col1, h1 {
     float: center;
     text-align: center;
     vertical-align: baseline;
+}
+.images{
+  column-count: 2;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*.col1, .col2, {
+  float: none;
+  width: 100%;
+  margin: 0;
+}*/
+}
+/*@media screen and (max-width:800px) {
+
   }
   .navbar{
   display: block;
@@ -59,14 +123,15 @@ img {
 
 @media screen and (min-width:801px) {
 
-  .col1 {
+  .logo {
     float: left;
     max-width: 25%;
     background-color: red;
     vertical-align: baseline;
-    /*margin-right: 40em;*/
   }
-
+  .navbar {
+    margin-bottom: 30em;
+  }
   .col2 {
     float: right;
     max-width: 75%;
@@ -84,4 +149,4 @@ img {
     column-count: 3;
   }
 
-}
+}*/
