--- a/css/styles.css
+++ b/css/styles.css
@@ -34,14 +34,13 @@ img {
 }
 
 /*biggest*/
-@media screen and (min-width:1000px) {
+@media screen and (min-width: 900px) {
   .wrap{
     position: relative;
   }
   .col1 {
-    clear: both;
     float: left;
-    width: 20%;
+    width: 30%;
   }
 
   .navbar {
@@ -68,11 +67,13 @@ img {
     margin-left: 10em;
     position: absolute;
     top: -5em;
-    width: 80%;
+    width: 70%;
+    column-count: 1;
   }
 
   .images {
-    clear: both;
+
+
   }
 
 }
